Implement fine calculator using strategy pattern.